<resources>
    <string name="app_name">SubEasy</string>
    <string name="title_home">Home</string>
    <string name="settings">Settings</string>
    <string name="empty_subscriptions">Add your 1st subscription to see it here</string>
    <string name="amount_spent">Amount Spent this month</string>
    <string name="upcoming_payments">Upcoming Payments</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="all_subscriptions">All services</string>
    <string name="custom_subscription">Custom service</string>
    <string name="search">Search</string>
    <string name="started_on">Started on</string>
    <string name="cost">Cost</string>
    <string name="note">Note</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="choose">Choose</string>
    <string name="cycle">Cycle</string>
    <string name="remind_me">Remind me</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="cancel_subscription">Cancel subscription</string>
    <string name="update_subscription">Update subscription</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="manage_your">Manage your</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="app_description">Seamless subscription management, simplified for your convenience</string>
    <string name="get_started">Get stared</string>
    <string name="monthly">Monthly</string>
    <string name="Yearly">Yearly</string>

    <string name="fill_required_fields">Fills the required fields</string>
    <string name="create_subscription_error">Subscription creation error</string>
    <string name="allow_micro">Please allow microphone access in the settings</string>
    <string name="start_record">Recording started</string>
    <string name="stop_record">Stop recording</string>
    <string name="enter_note_by_voice">Voice input</string>
    <string name="greeting">Hello, %1$s!</string>
    <string name="no_image_selected">No image selected</string>
    <string name="changes_saved">Changes saved</string>
    <string name="avatar_updated">Avatar updated</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="subscription_delete_confirm">Are you sure you want to delete the subscription?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subscription_deleted">Subscription deleted</string>
    <string name="tomorrow">Tomorrow</string>

    <plurals name="due_in_days">
        <item quantity="one">Due in %1$d day</item>
        <item quantity="few">Due in %1$d days</item>
        <item quantity="other">Due in %1$d days</item>
    </plurals>

    <plurals name="due_in_months">
        <item quantity="one">Due in %1$d month</item>
        <item quantity="few">Due in %1$d months</item>
        <item quantity="other">Due in %1$d months</item>
    </plurals>

    <string-array name="subscription_cycle">
        <item>Choose</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="subscription_remind">
        <item>Never</item>
        <item>One day</item>
        <item>One week</item>
        <item>One month</item>
    </string-array>
</resources>