<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/all_subscriptions"
        android:fontFamily="@font/red_rose_bold"
        android:textSize="24sp"
        android:textColor="@color/text_color" />

    <!-- Search input -->
    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        style="@style/editTextStyle"
        android:hint="@string/search"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:drawableEnd="@drawable/ic_magnifier"
        android:drawablePadding="8dp"/>

    <!-- Create custom subscription -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shape_subscription"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_rose_regular"
            android:text="@string/custom_subscription"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/custom_subscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- All subscription -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/navigation_all_subscriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
</LinearLayout>